# route.go
@@ -11,7 +11,8 @@ func RouteRegister(r *gin.Engine) {
     {
         v1.GET("/ping", (&controllers.TestController{}).Ping)
         v1.POST("/users", (&controllers.UserController{}).Create)
-        v1.POST("/users.delete", (&controllers.UserController{}).Delete)
+        v1.PUT("/users/:id", (&controllers.UserController{}).Update)
+        v1.DELETE("/users.delete", (&controllers.UserController{}).Delete)
     }
 
 
